Resolve layout shifting of TopNav during loading

--- a/src/components/layout/Member.module.scss
+++ b/src/components/layout/Member.module.scss
@@ -1,5 +1,9 @@
+@import "~/styles/variables.module";
+
 .container {
   position: relative;
+
+  font-size: $member-size;
 
   user-select: none;
   cursor: pointer;
